welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: '(' expected but '{' found.
    } else if {
              ^SlugHunting:18: error: illegal start of simple expression
  }while (!estSurBicuit())
  ^